[package]
name = "calc_sample"
version = "0.1.0"
authors = ["fummicc1 <fumiya.tennis1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_core = "0.68.0"
conrod_glium = "0.68.0"
glium = "0.24.0"
find_folder = "*"

